--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^6.4.8",
     "@mui/x-charts": "^7.17.0",
     "@react-oauth/google": "^0.12.1",
+    "@splinetool/react-spline": "^4.0.0",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "face-api.js": "^0.22.2",
